Ajustes nas anotações
